# datafun-07-ml

./: PROJECT_VIRTUAL_ENV.md  README.md  Sasta12_eda.ipynb  ml_workflow_demo.py  ml_workflow_demo_ordered.ipynb  pyproject.toml
