[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datafun-07-ml"
version = "0.1.0"
description = "Predictive ML project with Jupyter, pandas, seaborn, matplotlib, scikit-learn"
authors = [
    { name = "Sasta12" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jupyterlab",
    "numpy",
    "pandas",
    "pyarrow",
    "matplotlib",
    "seaborn",
    "scipy",
    "scikit-learn"
]
